refactor: byte코드 읽는 방식 변경